src/test/ui/non-constant-expr-for-arr-len.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/non-constant-expr-for-arr-len.rs:5:22
   |
LL |         let _x = [0; n];
   |                      ^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
